# axe-selenium-python

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CODE_OF_CONDUCT.md  Dockerfile  Jenkinsfile  MANIFEST.in  README.md  README.rst  package-lock.json  package.json  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: main.yml
axe-selenium-python/: axe.py  setup.py
axe-selenium-python/tests/: conftest.py
axe_selenium_python/: __init__.py  axe.py  package-lock.json  package.json  test_accessibility.py  test_accessibility_rules.py
axe_selenium_python/src/: axe.min.js
axe_selenium_python/tests/: conftest.py  test_accessibility_rules.py  test_axe.py  test_axe_config.py  test_fixture.py  test_get_script_contents.py  test_parametrize_rules.py  tox.ini
axe_selenium_python/tests/examples/: example-report_2-7.html  example-report_3.html  example-results.json
axe_selenium_python/tests/requirements/: flake8.txt  tests.txt
axe_selenium_python/tests/src/: axe.min.js
tests/: test_axe.py  test_page.html
tests/requirements/: tests.txt
tests/src/: axe.min.js
