[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "axe-selenium-python"
description = "Python library to integrate axe and selenium for web accessibility testing."
dynamic = ["version"]
readme = "README.rst"
authors = [
    {name="Kimberly Sereduck", email="ksereduck@mozilla.com"}
]
license = {"text" = "Mozilla Public License 2.0 (MPL 2.0)"}
keywords = ["axe-core", "selenium", "pytest-selenium", "accessibility" , "automation", "mozilla"]
requires-python = ">=3.12"
dependencies = [
  "selenium>=4.2",
  "pytest>=3.0",
]

[project.urls]
"Homepage" = "https://github.com/axe-selenium-python/axe-selenium-python"
"Issues" = "https://github.com/axe-selenium-python/axe-selenium-python/issues"

[tool.setuptools_scm]